# CannaGuide-2025

./: .a11y-baseline.json  .dockerignore  .editorconfig  .env.example  .eslintrc.json  .gitguardian.yml  .gitignore  .gitleaks.toml  .mcp.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release-please-manifest.json  .renovaterc.json  .snyk  AGENTS.md  ARCHITECTURE.md  App.css  App.tsx  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  ROADMAP.md  SECURITY.md  SettingsView.tsx  StrainsView.tsx  TestView.tsx  audit-translations.js  biome.json  capacitor.config.ts  commitlint.config.js  constants.ts  count-strains.js  (+45 more)
.clusterfuzzlite/: Dockerfile  build.sh  fuzz_url_service.js
.cursor/: index.mdc  mcp.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer-sh.json  devcontainer.codespaces.json  devcontainer.json  setup.sh  start.sh
.github/: CI-AUDIT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.husky/: commit-msg  pre-commit  pre-push
app/: source-assets.md  source-components.md  source-data.md  source-locales.md  source-main.md  source.md  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: core.json  default.json  desktop.json  dialog.json  fs.json  notification.json  shortcut.json  store.json  tray.json  updater.json  window-state.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+2233 files in other folders)
