[package]
name = "cannaguide-desktop"
version = "0.1.0"
description = "CannaGuide 2025 Desktop App"
authors = ["CannaGuide Team"]
edition = "2021"
license = "MIT"

[lib]
name = "cannaguide_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
